@@ -1,6 +1,7 @@
 package mapeditor.themesapi;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.List;
 
 import mapeditor.config.Config;
 
@@ -14,28 +15,29 @@ public class ThemeApi {
 	 */
 	private int maxColumn;
 
-	private ArrayList<ArrayList<MapObject>> mapObjects;
+	private LinkedList<LinkedList<MapObject>> mapObjects;
 
 	public ThemeApi(String name, Config config) {
 		this.name = name;
 		maxColumn = config.getMapApiColumnsNumber();
-		mapObjects = new ArrayList<ArrayList<MapObject>>();
+		mapObjects = new LinkedList<LinkedList<MapObject>>();
 	}
 
 	public void addMapObject(MapObject mapObject) {
 		// System.out.println("LAST ROW: " + getRowsSize());
 		// System.out.println("LAST COL: " + getLastColumnNumber());
 
-		ArrayList<MapObject> row = null;
+		LinkedList<MapObject> row = null;
 		if (mapObjects.isEmpty()) {
-			row = new ArrayList<MapObject>();
+			row = new LinkedList<MapObject>();
 			mapObjects.add(row);
 		} else {
-			row = mapObjects.get(mapObjects.size() - 1);
+			row = mapObjects.getLast();
+			// row = mapObjects.get(mapObjects.size() - 1);
 		}
 
 		if (row.size() >= maxColumn) {
-			row = new ArrayList<MapObject>();
+			row = new LinkedList<MapObject>();
 			mapObjects.add(row);
 		}
 
@@ -48,4 +50,52 @@ public class ThemeApi {
 	 * private int getLastColumnNumber() { int rowNo = getRowsSize(); return
 	 * mapObjects.get(rowNo).size(); }
 	 */
+
+	public void describeYourself() {
+
+		System.out.println("***\tTheme name: " + name + "\t***");
+
+		for (LinkedList<MapObject> row : mapObjects) {
+			System.out.println("Row: ");
+			for (MapObject mapObject : row) {
+				mapObject.describeYourself();
+			}
+
+		}
+	}
+
+	public MapObject getMapObject(int row, int col) {
+
+		if (row >= mapObjects.size()) {
+			return null;
+		}
+
+		// System.out.println("ROW: " + row + " COL: " + col);
+		// System.out.println("SIZE: " + mapObjects.size());
+
+		LinkedList<MapObject> objectsRow = mapObjects.get(row);
+
+		if (col >= objectsRow.size()) {
+			return null;
+		}
+		// System.out.println("SIZE2: " + objectsRow.size());
+
+		MapObject mapObject = objectsRow.get(col);
+
+		// System.out.println("!!!");
+		return mapObject;
+	}
+
+	public int getColumnsSize() {
+		List<MapObject> list = mapObjects.getFirst();
+		if (list != null) {
+			return list.size();
+		} else {
+			return 0;
+		}
+	}
+
+	public int getRowsSize() {
+		return mapObjects.size();
+	}
 }
